# FileExplorerExt

./: .gitignore  README.md  package.xml  pyproject.toml
freecad/FileExplorerExt/: __init__.py  _api.py  _commands.py  _explorer.py  _favorites.py  _files.py  _history.py  _intl.py  _preview.py  _qt.py  _state.py  _style.py  _tree.py  init_gui.py
freecad/FileExplorerExt/resources/: __init__.py
freecad/FileExplorerExt/resources/examples/: custom_macro.py
freecad/FileExplorerExt/resources/translations/: FileExplorerExt_de.qm  FileExplorerExt_de.ts  FileExplorerExt_en.ts  FileExplorerExt_es.qm  FileExplorerExt_es.ts  FileExplorerExt_fr.qm  FileExplorerExt_fr.ts  FileExplorerExt_it.qm  FileExplorerExt_it.ts  FileExplorerExt_pt.qm  FileExplorerExt_pt.ts
